# GFViewer

./: LICENSE  README.md  gfviewer.py  pyproject.toml  requirements.txt  setup.py  test_run.sh
gfviewer/: __init__.py  main.py
sample_data/: chrs_test_1-2.txt  colors_test_2.txt
tests/: colors_test_1.txt  data_test_1.xlsx  data_test_2.csv  data_test_3.tsv
