[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfviewer"
version = "1.0.4"
description = "A tool for visualizing the localization of multi-gene families across the genome of a given organism"
authors = [{name = "Sakshar Chakravarty", email = "schak026@ucr.edu"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8, <3.13"  # Restrict Python version
dependencies = [
    "biopython",
    "pandas",
    "matplotlib",
    "reportlab",
    "pypdf2",
    "openpyxl"
]

[project.scripts]
gfviewer = "gfviewer.main:main"

[project.urls]
Homepage = "https://github.com/sakshar/GFViewer"
Repository = "https://github.com/sakshar/GFViewer"
Issues = "https://github.com/sakshar/GFViewer/issues"
